# ukyo-bot

./: .gitignore  Cargo.toml  dev.sh  docker-compose-dev.yml  docker-compose.yml  dump.sql  mysql-init.sql  run.sh
.github/workflows/: main.yml
bot-ukyo/: Dockerfile  dev.sh  dump.sql  run.sh
bot-ukyo/.github/workflows/: main.yml
bot-ukyo/src/: config.rs  main.rs  types.rs
bot-ukyo/src/db/: mod.rs
bot-ukyo/src/db/crud/: mod.rs
bot-ukyo/src/db/crud/users/: mod.rs
bot-ukyo/src/db/entity/: messages.rs  mod.rs  prelude.rs  users.rs
bot-ukyo/src/discord/: mod.rs
bot-ukyo/src/discord/cogs/: mod.rs
bot-ukyo/src/discord/cogs/messages/: mod.rs
bot-ukyo/src/discord/cogs/stats/: mod.rs
bot-ukyo/src/discord/events/: mod.rs
bot-ukyo/src/discord/events/messages/: mod.rs
migrations/: 2024-09-24_migration-welcome-messages.sql
mysql/: Dockerfile  ukyo_bot_dump.sql
mysql/init_scripts/: 01-Users.sql  dump.sql
src/: config.rs  main.rs  types.rs
src/db/crud/: mod.rs
src/db/crud/boot/: mod.rs
src/db/crud/messages/: mod.rs
src/db/crud/users/: mod.rs
src/db/entity/: boot.rs  mod.rs  prelude.rs  users.rs
src/discord/: mod.rs
src/discord/cogs/: mod.rs
src/discord/cogs/boot/: mod.rs
src/discord/cogs/config/: mod.rs
src/discord/cogs/messages/: mod.rs
src/discord/cogs/misc/: mod.rs
src/discord/cogs/stats/: mod.rs
src/discord/events/: mod.rs
src/discord/events/message/: message.rs  mod.rs
src/discord/events/reactions/: mod.rs  reaction_events.rs  reactions.rs
src/discord/events/ready/: mod.rs  ready.rs
src/discord/events/users/: join.rs
(+7 files in other folders)
