[package]
name = "bot-ukyo"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = { version = "0.6.1", features = [
  "yaml_conf",
], default-features = false }
poise = "0.6.1"
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.24", features = ["derive"] }
serde_json = "1.0.120"
tmi = "0.7.1"
anyhow = "1.0.86"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
